# Amour.exe

./: .env  .gitignore  HANDOFFS_API.md  LESSONS_LEARNED.md  MULTI_AGENT_HANDOFF.md  Mistral_hack.md  README.md  agent_reference.md  amour_agent.py  girl.html  guy.html  install.md  main.py  pyproject.toml  requirements.txt
dashboard/: .env  index.html  package.json  vite.config.js
dashboard/src/: App.jsx  index.css  main.jsx
docs/: PLAN.MD  SDK_REFERENCE.md  idea.md
voice_interaction/: offline_stt.py  realtime_tts.py
