[project]
name = "amour-exe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2024.8.30",
    "elevenlabs>=2.37.0",
    "mistralai[agents,realtime]>=1.12.4",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "weave>=0.52.29",
    "websockets>=16.0",
]
